--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -122,7 +122,7 @@
         </ul>
         <div class="download" onclick="downloadImg()">下载到桌面</div>
         <div class="download" onclick="minimize()">最小化</div>
-        <div class="download" onclick="closeapp()">关闭</div>
+        <div class="download" onclick="closeapp()">退出</div>
     </div>
     <div class="drag" style="height: 10px;"></div>
 </body>
